--- a/analyze-data.ipynb
+++ b/analyze-data.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open(\"all_data.json\", \"r\") as f:\n",
+    "with open(\"28-09_27-10_alldata.json\", \"r\") as f:\n",
     "    data = json.load(f)"
    ]
   },
