--- a/download-data.ipynb
+++ b/download-data.ipynb
@@ -187,7 +187,8 @@
    "hash": "d790a148e15a253f017f711abd442af19374b4ed938e56212be77aae3713b87a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('.venv': venv)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
