Add data plot analysis

--- a/analyze-data.ipynb
+++ b/analyze-data.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open(\"28-09_07-11_alldata.json\", \"r\") as f:\n",
+    "with open(\"28-09_19-11_alldata.json\", \"r\") as f:\n",
     "    data = json.load(f)"
    ]
   },
@@ -50,7 +50,7 @@
     "- vib -> vibration\n",
     "  - acc\n",
     "  - peak\n",
-    "  - root: removed due to this weird shape  \n",
+    "  - root: removed due to its weird shape  \n",
     "    ![](https://i.imgur.com/7nI0eCG.png)\n",
     "  - f1/f2/f3\n",
     "  - kurt\n",
@@ -107,15 +107,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,7 +123,10 @@
     "df.loc[(df[\"time\"] >= \"2021-10-27 17:30\") & (df[\"time\"] <= \"2021-10-29 00:00\"), \"label\"] = \"bearings\"\n",
     "\n",
     "df.loc[(df[\"time\"] >= \"2021-11-03 16:00\") & (df[\"time\"] <= \"2021-11-05 11:00\"), \"label\"] = \"working-engine\" # Every 2 minutes (TOCHECK)\n",
-    "df.loc[(df[\"time\"] >= \"2021-11-05 13:30\") & (df[\"time\"] <= \"2021-11-05 23:59\"), \"label\"] = \"bearings\" # Every 2 minutes (TOCHECK)"
+    "df.loc[(df[\"time\"] >= \"2021-11-05 13:30\") & (df[\"time\"] <= \"2021-11-05 23:59\"), \"label\"] = \"bearings\" # Every 2 minutes (TOCHECK)\n",
+    "# 5th to 10th nothing happened\n",
+    "df.loc[(df[\"time\"] >= \"2021-11-10 16:30\") & (df[\"time\"] <= \"2021-11-16 14:00\"), \"label\"] = \"magnet-partial\"\n",
+    "df.loc[(df[\"time\"] >= \"2021-11-16 16:20\") & (df[\"time\"] <= \"2021-12\"), \"label\"] = \"magnet-1\" # TOUPDATE FINISH DATE"
    ]
   },
   {
@@ -153,20 +147,52 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "sns.pairplot(\n",
-    "    df.reset_index()[[\n",
-    "        # 's_00', 's_01', 's_02', 's_03', 's_04', 's_05', 's_06', 's_07', 's_08', 's_09', 's_10', 's_11', 's_12', 's_13', 's_14', 's_15', 's_16', 's_17', 's_18', 's_19',\n",
-    "        'sonic_custom', 'sonic_rmslog',\n",
-    "        'vib_x_acc', 'vib_x_kurt', 'vib_x_peak', 'vib_x_vel',\n",
-    "        'vib_y_acc', 'vib_y_kurt', 'vib_y_peak', 'vib_y_vel',\n",
-    "        'vib_z_acc', 'vib_z_kurt', 'vib_z_peak', 'vib_z_vel',\n",
-    "        'temperature_surface', 'temperature_external', 'current',\n",
-    "        'label'\n",
-    "    ]],\n",
-    "    kind=\"kde\",\n",
-    "    hue=\"label\",\n",
-    "    corner=True\n",
-    ")"
+    "import warnings\n",
+    "\n",
+    "# with warnings.catch_warnings():\n",
+    "    # sns.pairplot(\n",
+    "    #     df.reset_index()[[\n",
+    "    #         # 's_00', 's_01', 's_02', 's_03', 's_04', 's_05', 's_06', 's_07', 's_08', 's_09', 's_10', 's_11', 's_12', 's_13', 's_14', 's_15', 's_16', 's_17', 's_18', 's_19',\n",
+    "    #         'sonic_custom', 'sonic_rmslog',\n",
+    "    #         'vib_x_acc', 'vib_x_kurt', 'vib_x_peak', 'vib_x_vel',\n",
+    "    #         'vib_y_acc', 'vib_y_kurt', 'vib_y_peak', 'vib_y_vel',\n",
+    "    #         'vib_z_acc', 'vib_z_kurt', 'vib_z_peak', 'vib_z_vel',\n",
+    "    #         'temperature_surface', 'temperature_external', 'current',\n",
+    "    #         'label'\n",
+    "    #     ]],\n",
+    "    #     kind=\"kde\",\n",
+    "    #     hue=\"label\",\n",
+    "    #     corner=True\n",
+    "    # )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df.columns[3:]:\n",
+    "    for label in df.label_int.unique():\n",
+    "        dff = df[df.label_int == label][col]\n",
+    "        # Reset index creates an index column\n",
+    "        dff = dff.reset_index().drop(\"index\", axis=1)\n",
+    "        plt.plot(dff, label=label)\n",
+    "    plt.title(col)\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "    # break\n",
+    "\n",
+    "# \n",
+    "# df[\"s_00\"]\n",
+    "# plt.plot(df[\"s_00\"])"
    ]
   },
   {
@@ -242,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,17 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "97%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "neigh = KNeighborsClassifier(n_neighbors=3)\n",
@@ -274,17 +292,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "97%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import svm\n",
     "clf = svm.SVC()\n",
