Update feature extractor

--- a/data-viz.ipynb
+++ b/data-viz.ipynb
@@ -634,22 +634,8 @@
    "id": "c0011562-5864-4d31-a48d-17f9fcb4b20e",
    "metadata": {},
    "source": [
-    "## Mesurements (For models)\n",
-    "- RMS : root mean square\n",
-    "- variance\n",
-    "- skewness : normalised third central moment\n",
-    "- kurtosis : normalised fourth central moment\n",
-    "- normalised sixth central moment\n",
-    "- PV : peak value"
+    "## Mesurements (For models)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e61d706-5d2b-4b6d-8297-2bffe42fbab1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -668,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
