Move score modello to home

--- a/plots.ipynb
+++ b/plots.ipynb
@@ -36,9 +36,9 @@
     "plt.plot(knn_agent_values, label=\"knn_agent_values\")\n",
     "plt.plot(lda_agent_values, label=\"lda_agent_values\")\n",
     "plt.plot(logistic_agent_values, label=\"logistic_agent_values\")\n",
-    "plt.plot(knnRUL_agent_values, label=\"knnRUL_agent_values\")\n",
-    "plt.plot(svmRUL_agent_values, label=\"svmRUL_agent_values\")\n",
-    "plt.plot(svmRUL_agent_values, label=\"ridgeRUL_agent_values\")\n",
+    "# plt.plot(knnRUL_agent_values, label=\"knnRUL_agent_values\")\n",
+    "# plt.plot(svmRUL_agent_values, label=\"svmRUL_agent_values\")\n",
+    "# plt.plot(svmRUL_agent_values, label=\"ridgeRUL_agent_values\")\n",
     "\n",
     "plt.legend()\n",
     "plt.show()"
