Add cost function notebook

--- a/8-multi-model.ipynb
+++ b/8-multi-model.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7914a463-d202-4376-80af-b0000795a8c0",
+   "metadata": {},
+   "source": [
+    "# Multi model training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "1947a17a-b2c0-4b98-a230-6cdd4660214d",
